--- a/wiffle/_wiffle-core.css
+++ b/wiffle/_wiffle-core.css
@@ -17,7 +17,7 @@
  */
 
 .wiffle { margin: 0 10px; }
-	.debug .wiffle { background-color: rgba(0, 0, 0, 0.25); } /* black, #000 */
+	.debug .wiffle { background-color: rgba(0, 0, 0, .25); } /* black, #000 */
 
 /*
 **--------------------------------------------------------------------------
