--- a/demo/demo.css
+++ b/demo/demo.css
@@ -58,3 +58,12 @@ h4 { margin: 10px; }
 p { text-align: center; font-weight: bold; font-size: 62.5%; }
 
 .wrap { padding: 1px 10px; margin: -1px 0; } /* Padding + prevent margin collapse. */
+
+hr {
+	display: block;
+	height: 1px;
+	border: 0;
+	border-top: 1px solid #ccc;
+	margin: 10px 0;
+	padding: 0;
+}
