--- a/demo/demo.css
+++ b/demo/demo.css
@@ -44,14 +44,18 @@ a:active {
 }
 
 h1 {
-	font-size: 312.5%; /* 50px */
+	font-size: 150%;
 	text-align: center;
 	line-height: 1.5;
 	margin: 0;
 	padding: 0;
 	white-space: nowrap;
 }
-h2 { text-align: center; margin: 0 0 20px; }
+h2 { font-size: 118.8%; text-align: center; margin: 0 0 10px; }
+@media only screen and (min-width: 665px) {
+	h1 { font-size: 312.5%; }
+	h2 { font-size: 150%; margin-bottom: 20px; }
+}
 h3 { border-top: 1px solid #000; margin: 0 0 10px; padding: 10px 5px; }
 h4 { margin: 10px; }
 
