Pushing the v3.2.0 release.

--- a/wiffle/_wiffle-core.css
+++ b/wiffle/_wiffle-core.css
@@ -5,6 +5,7 @@
 /*
 **--------------------------------------------------------------------------
 **
+** 1.
 ** Moblie
 ** [ A ]LPHA
 ** `viewport < 665px`
@@ -22,6 +23,7 @@
 /*
 **--------------------------------------------------------------------------
 **
+** 2.
 ** Tablet
 ** [ B ]RAVO
 ** Breakpoint #1
@@ -43,6 +45,7 @@
 /*
 **--------------------------------------------------------------------------
 **
+** 3.
 ** Desktop
 ** [ C ]HARLIE
 ** Breakpoint #2
@@ -64,6 +67,7 @@
 /*
 **--------------------------------------------------------------------------
 **
+** 4.
 ** Big Desktop
 ** [ D ]ELTA
 ** Breakpoint #3
