A few tweaks and additions...

--- a/wiffle/_wiffle-extras.css
+++ b/wiffle/_wiffle-extras.css
@@ -1,8 +1,8 @@
-
-
 /* ==========================================================================
    _wiffle-extras.css
    ========================================================================== */
+
+/*-----------------( [ A ]LPHA )-----------------*/
 
 /**
  * Borders.
