--- a/wiffle/_wiffle-utils.css
+++ b/wiffle/_wiffle-utils.css
@@ -15,7 +15,7 @@
 	/*----------------------------------*/
 	
 	/**
-	 * Right `px` cols.
+	 * `px` cols, right.
 	 * Compatible with IE > 6.
 	 */
 	
@@ -42,7 +42,7 @@
 	/*----------------------------------*/
 	
 	/**
-	 * Right `px` cols.
+	 * `px` cols, right.
 	 */
 	
 	.w_row.w_Cr > .w_col { float: right; }
@@ -68,7 +68,7 @@
 	/*----------------------------------*/
 	
 	/**
-	 * Right `px` cols.
+	 * `px` cols, right.
 	 */
 	
 	.w_row.w_Dr > .w_col { float: right; }
