--- a/wiffle/wiffle.css
+++ b/wiffle/wiffle.css
@@ -1,9 +1,5 @@
 /**
- *  _  _  __  ____  ____  __    ____ 
- * / )( \(  )(  __)(  __)(  )  (  __)
- * \ /\ / )(  ) _)  ) _) / (_/\ ) _) = ((640 - 3x) / 4)
- * (_/\_)(__)(__)  (__)  \____/(____)
- *
+ * Wiffle = ((640 - 3x) / 4)
  * A "responsive" grid system based on Frameless, OOCSS Grids and Standard Advertising Units.
  *
  * @author Micky Hulse
@@ -110,13 +106,13 @@
 /*-----------------( [ A ]LPHA )-----------------*/
 
 /**
- * Left `px` grid base structure.
+ * `px` base structure.
  *
  * @see rgne.ws/MopmlH
  */
 
 .w_row:before, .w_row:after { content: ""; display: table; } .w_row:after { clear: both; } .w_row { *zoom: 1; } /* rgne.ws/KZHkqq */
-	.w_col { padding: 1px 0; margin: -1px 0; position: relative; } /* rgne.ws/JAoGck */
+	.w_col { margin: -1px 0; padding: 1px 0; position: relative; } /* rgne.ws/JAoGck */
 		.debug .w_col { background: rgba(0, 0, 255, .25); } /* blue, #00f */
 
 @media only screen and (min-width: 665px) {
@@ -124,7 +120,7 @@
 	/*-----------------( [ B ]RAVO )-----------------*/
 	
 	/**
-	 * Left `px` rows/cols.
+	 * `px` rows/columns.
 	 *
 	 * @see rgne.ws/KdetDk
 	 */
@@ -135,7 +131,7 @@
 	/*----------------------------------*/
 	
 	/**
-	 * Left `px` classes.
+	 * `px` columns.
 	 *
 	 * @see rgne.ws/KdetDk
 	 */
@@ -155,7 +151,7 @@
 	/*-----------------( [ C ]HARLIE )-----------------*/
 	
 	/**
-	 * Left `px` classes.
+	 * `px` columns.
 	 */
 	
 	.w_C130 { width: 130px; }
@@ -177,7 +173,7 @@
 	/*-----------------( [ D ]ELTA )-----------------*/
 	
 	/**
-	 * Left `px` classes.
+	 * `px` columns.
 	 */
 	
 	.w_D130 { width: 130px; }
@@ -205,19 +201,19 @@
 /*-----------------( [ A ]LPHA )-----------------*/
 
 /**
- * `%` grid base structure.
+ * `%` base structure.
  *
  * @see rgne.ws/JNpYSM
  */
 
 .w_line:before, .w_line:after { content: ""; display: table; } .w_line:after { clear: both; } .w_line { *zoom: 1; } /* rgne.ws/KZHkqq */
-	.w_unit { float: left; display: inline; width: 100%; position: relative; }
+	.w_unit { width: 100%; float: left; display: inline; position: relative; }
 		.debug .w_unit { background: rgba(0, 0, 255, .25); } /* blue, #00f */
 
 /*----------------------------------*/
 
 /**
- * `%` classes.
+ * `%` columns.
  */
 
 .w_A1of2 { width: 50%; }
@@ -227,8 +223,8 @@
 .w_A3of4 { width: 75%; }
 .w_A1of5 { width: 20%; }
 .w_A2of5 { width: 40%; }
-.w_A3of5 { width:60%; }
-.w_A4of5 { width:80%; }
+.w_A3of5 { width: 60%; }
+.w_A4of5 { width: 80%; }
 .w_A1of6 { width: 16.6666666%; }
 .w_A5of6 { width: 83.3333333%; }
 .w_A1of7 { width: 14.2857143%; }
@@ -262,14 +258,14 @@
 	.debug .w_A3of8 { background: rgba(218, 165, 32, .25); }  /* goldenrod, #daa520 */
 	.debug .w_A5of8 { background: rgba(210, 180, 140, .25); } /* tan, #d2b48c */
 	.debug .w_A7of8 { background: rgba(255, 127, 80, .25); }  /* coral, #ff7f50 */
-.w_Afix { width: auto; float: none; display: block; overflow: hidden; *overflow: visible; *zoom: 1; _left: -3px; _margin-right: -3px; }
+.w_Afix { width: auto; _margin-right: -3px; float: none; display: block; overflow: hidden; *overflow: visible; *zoom: 1; _left: -3px; }
 
 @media only screen and (min-width: 665px) {
 	
 	/*-----------------( [ B ]RAVO )-----------------*/
 	
 	/**
-	 * `%` classes.
+	 * `%` columns.
 	 */
 	
 	.w_B1of2 { width: 50%; }
@@ -279,8 +275,8 @@
 	.w_B3of4 { width: 75%; }
 	.w_B1of5 { width: 20%; }
 	.w_B2of5 { width: 40%; }
-	.w_B3of5 { width:60%; }
-	.w_B4of5 { width:80%; }
+	.w_B3of5 { width: 60%; }
+	.w_B4of5 { width: 80%; }
 	.w_B1of6 { width: 16.6666666%; }
 	.w_B5of6 { width: 83.3333333%; }
 	.w_B1of7 { width: 14.2857143%; }
@@ -314,7 +310,7 @@
 		.debug .w_B3of8 { background: rgba(218, 165, 32, .25); }  /* goldenrod, #daa520 */
 		.debug .w_B5of8 { background: rgba(210, 180, 140, .25); } /* tan, #d2b48c */
 		.debug .w_B7of8 { background: rgba(255, 127, 80, .25); }  /* coral, #ff7f50 */
-	.w_Bfix { width: auto; float: none; display: block; overflow: hidden; *overflow: visible; *zoom: 1; _left: -3px; _margin-right: -3px; }
+	.w_Bfix { width: auto; _margin-right: -3px; float: none; display: block; overflow: hidden; *overflow: visible; *zoom: 1; _left: -3px; }
 	
 }
 
@@ -323,7 +319,7 @@
 	/*-----------------( [ C ]HARLIE )-----------------*/
 	
 	/**
-	 * `%` classes.
+	 * `%` columns.
 	 */
 	
 	.w_C1of2 { width: 50%; }
@@ -333,8 +329,8 @@
 	.w_C3of4 { width: 75%; }
 	.w_C1of5 { width: 20%; }
 	.w_C2of5 { width: 40%; }
-	.w_C3of5 { width:60%; }
-	.w_C4of5 { width:80%; }
+	.w_C3of5 { width: 60%; }
+	.w_C4of5 { width: 80%; }
 	.w_C1of6 { width: 16.6666666%; }
 	.w_C5of6 { width: 83.3333333%; }
 	.w_C1of7 { width: 14.2857143%; }
@@ -368,7 +364,7 @@
 		.debug .w_C3of8 { background: rgba(218, 165, 32, .25); }  /* goldenrod, #daa520 */
 		.debug .w_C5of8 { background: rgba(210, 180, 140, .25); } /* tan, #d2b48c */
 		.debug .w_C7of8 { background: rgba(255, 127, 80, .25); }  /* coral, #ff7f50 */
-	.w_Cfix { width: auto; float: none; display: block; overflow: hidden; *overflow: visible; *zoom: 1; _left: -3px; _margin-right: -3px; }
+	.w_Cfix { width: auto; _margin-right: -3px; float: none; display: block; overflow: hidden; *overflow: visible; *zoom: 1; _left: -3px; }
 	
 }
 
@@ -377,7 +373,7 @@
 	/*-----------------( [ D ]ELTA )-----------------*/
 	
 	/**
-	 * `%` classes.
+	 * `%` columns.
 	 */
 	
 	.w_D1of2 { width: 50%; }
@@ -387,8 +383,8 @@
 	.w_D3of4 { width: 75%; }
 	.w_D1of5 { width: 20%; }
 	.w_D2of5 { width: 40%; }
-	.w_D3of5 { width:60%; }
-	.w_D4of5 { width:80%; }
+	.w_D3of5 { width: 60%; }
+	.w_D4of5 { width: 80%; }
 	.w_D1of6 { width: 16.6666666%; }
 	.w_D5of6 { width: 83.3333333%; }
 	.w_D1of7 { width: 14.2857143%; }
@@ -422,7 +418,156 @@
 		.debug .w_D3of8 { background: rgba(218, 165, 32, .25); }  /* goldenrod, #daa520 */
 		.debug .w_D5of8 { background: rgba(210, 180, 140, .25); } /* tan, #d2b48c */
 		.debug .w_D7of8 { background: rgba(255, 127, 80, .25); }  /* coral, #ff7f50 */
-	.w_Dfix { width: auto; float: none; display: block; overflow: hidden; *overflow: visible; *zoom: 1; _left: -3px; _margin-right: -3px; }
+	.w_Dfix { width: auto; _margin-right: -3px; float: none; display: block; overflow: hidden; *overflow: visible; *zoom: 1; _left: -3px; }
+	
+}
+
+/* ==========================================================================
+   _wiffle-pxct.css
+   ========================================================================== */
+
+/*-----------------( [ A ]LPHA )-----------------*/
+
+/**
+ * `px`/`%` base structure.
+ *
+ * @see rgne.ws/RK3zVl
+ */
+
+.w_boxes:before, .w_boxes:after { content: ""; display: table; } .w_boxes:after { clear: both; } .w_boxes { *zoom: 1; } /* rgne.ws/KZHkqq */
+	.w_box { width: 100%; float: left; display: inline; position: relative; }
+		.debug .w_box { background: rgba(0, 0, 255, .25); } /* blue, #00f */
+
+/**
+ * `%` columns.
+ */
+
+.w_A130ml { margin-left: 170px; } .w_A130mr { margin-right: 170px; } /* 130px + 40px */
+	.debug .w_A130ml, .debug .w_A130mr { background: rgba(128, 0, 128, .25); } /* purple, #800080 */
+.w_A130ml, .w_A130mr { width: auto; _height: 1%; _margin: 0; float: none; display: block; }
+
+/**
+ * `px` columns.
+ */
+
+.w_A130fl, .w_A130fr { width: 130px; }
+	.debug .w_A130fl, .debug .w_A130fr { background: rgba(0, 0, 128, .25); } /* navy, #000080 */
+.w_A130fl { _margin-right: 37px; } .w_A130fr { _margin-left: 37px; float: right; }
+
+@media only screen and (min-width: 665px) {
+	
+	/*-----------------( [ B ]RAVO )-----------------*/
+	
+	/**
+	 * `%` columns.
+	 */
+	
+	.w_B130ml { margin-left: 170px; } .w_B130mr { margin-right: 170px; } /* 130px + 40px */
+	.w_B300ml { margin-left: 340px; } .w_B300mr { margin-right: 340px; } /* 300px + 40px */
+	.w_B470ml { margin-left: 510px; } .w_B470mr { margin-right: 510px; } /* 470px + 40px */
+		.debug .w_B130ml, .debug .w_B130mr { background: rgba(0, 128, 128, .25); }   /* teal, #008080 */
+		.debug .w_B300ml, .debug .w_B300mr { background: rgba(192, 192, 192, .25); } /* silver, #c0c0c0 */
+		.debug .w_B470ml, .debug .w_B470mr { background: rgba(0, 128, 0, .25); }     /* green, #008000 */
+	.w_B130ml, .w_B130mr, .w_B300ml, .w_B300mr, .w_B470ml, .w_B470mr { width: auto; _height: 1%; _margin: 0; float: none; display: block; }
+	
+	/**
+	 * `px` columns.
+	 */
+	
+	.w_B130fl, .w_B130fr { width: 130px; }
+	.w_B300fl, .w_B300fr { width: 300px; }
+	.w_B470fl, .w_B470fr { width: 470px; }
+		.debug .w_B130fl, .debug .w_B130fr { background: rgba(0, 255, 0, .25); }     /* lime, #0f0 */
+		.debug .w_B300fl, .debug .w_B300fr { background: rgba(255, 255, 255, .25); } /* white, #fff */
+		.debug .w_B470fl, .debug .w_B470fr { background: rgba(240, 230, 140, .25); } /* khaki, #f0e68c */
+	.w_B130fl, .w_B300fl, .w_B470fl { _margin-right: 37px; }
+	.w_B130fr, .w_B300fr, .w_B470fr { _margin-left: 37px; float: right; }
+	
+}
+
+@media only screen and (min-width: 1005px) {
+	
+	/*-----------------( [ C ]HARLIE )-----------------*/
+	
+	/**
+	 * `%` columns.
+	 */
+	
+	.w_C130ml { margin-left: 170px } .w_C130mr { margin-right: 170px; } /* 130px + 40px */
+	.w_C300ml { margin-left: 340px } .w_C300mr { margin-right: 340px; } /* 300px + 40px */
+	.w_C470ml { margin-left: 510px } .w_C470mr { margin-right: 510px; } /* 470px + 40px */
+	.w_C640ml { margin-left: 680px } .w_C640mr { margin-right: 680px; } /* 640px + 40px */
+	.w_C810ml { margin-left: 850px } .w_C810mr { margin-right: 850px; } /* 810px + 40px */
+		.debug .w_C130ml, .debug .w_C130mr { background: rgba(128, 128, 128, .25); } /* gray, #808080 */
+		.debug .w_C300ml, .debug .w_C300mr { background: rgba(128, 128, 0, .25); }   /* olive, #808000 */
+		.debug .w_C470ml, .debug .w_C470mr { background: rgba(255, 255, 0, .25); }   /* yellow, #ff0 */
+		.debug .w_C640ml, .debug .w_C640mr { background: rgba(255, 0, 0, .25); }     /* red, #f00 */
+		.debug .w_C810ml, .debug .w_C810mr { background: rgba(255, 0, 255, .25); }   /* fuchsia, #f0f */
+	.w_C130ml, .w_C130mr, .w_C300ml, .w_C300mr, .w_C470ml, .w_C470mr, .w_C640ml, .w_C640mr, .w_C810ml, .w_C810mr { width: auto; _height: 1%; _margin: 0; float: none; display: block; }
+	
+	/**
+	 * `px` columns.
+	 */
+	
+	.w_C130fl, .w_C130fr { width: 130px; }
+	.w_C300fl, .w_C300fr { width: 300px; }
+	.w_C470fl, .w_C470fr { width: 470px; }
+	.w_C640fl, .w_C640fr { width: 640px; }
+	.w_C810fl, .w_C810fr { width: 810px; }
+		.debug .w_C130fl, .debug .w_C130fr { background: rgba(128, 0, 0, .25); }    /* maroon, #800000 */
+		.debug .w_C300fl, .debug .w_C300fr { background: rgba(64, 224, 208, .25); } /* turquoise, #40e0d0 */
+		.debug .w_C470fl, .debug .w_C470fr { background: rgba(128, 0, 0, .25); }    /* maroon, #800000 */
+		.debug .w_C640fl, .debug .w_C640fr { background: rgba(255, 0, 0, .25); }    /* red, #f00 */
+		.debug .w_C810fl, .debug .w_C810fr { background: rgba(255, 255, 0, .25); }  /* yellow, #ff0 */
+	.w_C130fl, .w_C300fl, .w_C470fl, .w_C640fl, .w_C810fl { _margin-right: 37px; }
+	.w_C130fr, .w_C300fr, .w_C470fr, .w_C640fr, .w_C810fr { _margin-left: 37px; float: right; }
+	
+}
+
+@media only screen and (min-width: 1345px) {
+	
+	/*-----------------( [ D ]ELTA )-----------------*/
+	
+	/**
+	 * `%` columns.
+	 */
+	
+	.w_D130ml { margin-left: 170px } .w_D130mr { margin-right: 170px; }     /* 130px + 40px */
+	.w_D300ml { margin-left: 340px } .w_D300mr { margin-right: 340px; }     /* 300px + 40px */
+	.w_D470ml { margin-left: 510px } .w_D470mr { margin-right: 510px; }     /* 470px + 40px */
+	.w_D640ml { margin-left: 680px } .w_D640mr { margin-right: 680px; }     /* 640px + 40px */
+	.w_D810ml { margin-left: 850px } .w_D810mr { margin-right: 850px; }     /* 810px + 40px */
+	.w_D980ml { margin-left: 1020px } .w_D980mr { margin-right: 1020px; }   /* 980px + 40px */
+	.w_D1150ml { margin-left: 1190px } .w_D1150mr { margin-right: 1190px; } /* 1150px + 40px */
+		.debug .w_D130ml, .debug .w_D130mr { background: rgba(128, 128, 0, .25); }     /* olive, #808000 */
+		.debug .w_D300ml, .debug .w_D300mr { background: rgba(128, 128, 128, .25); }   /* gray, #808080 */
+		.debug .w_D470ml, .debug .w_D470mr { background: rgba(255, 0, 255, .25); }     /* fuchsia, #f0f */
+		.debug .w_D640ml, .debug .w_D640mr { background: rgba(255, 255, 255, .25); }   /* white, #fff */
+		.debug .w_D810ml, .debug .w_D810mr { background: rgba(0, 255, 0, .25); }       /* lime, #0f0 */
+		.debug .w_D980ml, .debug .w_D980mr { background: rgba(0, 128, 0, .25); }       /* green, #008000 */
+		.debug .w_D1150ml, .debug .w_D1150mr { background: rgba(192, 192, 192, .25); } /* silver, #c0c0c0 */
+	.w_D130ml, .w_D130mr, .w_D300ml, .w_D300mr, .w_D470ml, .w_D470mr, .w_D640ml, .w_D640mr, .w_D810ml, .w_D810mr, .w_D980ml, .w_D980mr, .w_D1150ml, .w_D1150mr { width: auto; _height: 1%; _margin: 0; float: none; display: block; }
+	
+	/**
+	 * `px` columns.
+	 */
+	
+	.w_D130fl, .w_D130fr { width: 130px; }
+	.w_D300fl, .w_D300fr { width: 300px; }
+	.w_D470fl, .w_D470fr { width: 470px; }
+	.w_D640fl, .w_D640fr { width: 640px; }
+	.w_D810fl, .w_D810fr { width: 810px; }
+	.w_D980fl, .w_D980fr { width: 980px; }
+	.w_D1150fl, .w_D1150fr { width: 1150px; }
+		.debug .w_D130fl, .debug .w_D130fr { background: rgba(0, 255, 255, .25); }     /* aqua, #0ff */
+		.debug .w_D300fl, .debug .w_D300fr { background: rgba(0, 128, 128, .25); }     /* teal, #008080 */
+		.debug .w_D470fl, .debug .w_D470fr { background: rgba(0, 0, 128, .25); }       /* navy, #000080 */
+		.debug .w_D640fl, .debug .w_D640fr { background: rgba(128, 0, 128, .25); }     /* purple, #800080 */
+		.debug .w_D810fl, .debug .w_D810fr { background: rgba(255, 165, 0, .25); }     /* orange, #ffa500 */
+		.debug .w_D980fl, .debug .w_D980fr { background: rgba(0, 0, 255, .25); }       /* blue, #00f */
+		.debug .w_D1150fl, .debug .w_D1150fr { background: rgba(216, 191, 216, .25); } /* thistle, #d8bfd8 */
+	.w_D130fl, .w_D300fl, .w_D470fl, .w_D640fl, .w_D810fl, .w_D980fl, .w_D1150fl { _margin-right: 37px; }
+	.w_D130fr, .w_D300fr, .w_D470fr, .w_D640fr, .w_D810fr, .w_D980fr, .w_D1150fr { _margin-left: 37px; float: right; }
 	
 }
 
@@ -443,7 +588,7 @@
 	/*----------------------------------*/
 	
 	/**
-	 * Right `px` cols.
+	 * `px` cols, right.
 	 * Compatible with IE > 6.
 	 */
 	
@@ -470,7 +615,7 @@
 	/*----------------------------------*/
 	
 	/**
-	 * Right `px` cols.
+	 * `px` cols, right.
 	 */
 	
 	.w_row.w_Cr > .w_col { float: right; }
@@ -496,7 +641,7 @@
 	/*----------------------------------*/
 	
 	/**
-	 * Right `px` cols.
+	 * `px` cols, right.
 	 */
 	
 	.w_row.w_Dr > .w_col { float: right; }
@@ -509,11 +654,11 @@
 	
 }
 
-
-
 /* ==========================================================================
    _wiffle-extras.css
    ========================================================================== */
+
+/*-----------------( [ A ]LPHA )-----------------*/
 
 /**
  * Borders.
