--- a/wiffle/wiffle.css
+++ b/wiffle/wiffle.css
@@ -207,7 +207,7 @@
  */
 
 .w_line:before, .w_line:after { content: ""; display: table; } .w_line:after { clear: both; } .w_line { *zoom: 1; } /* rgne.ws/KZHkqq */
-	.w_unit { width: 100%; float: left; display: inline; position: relative; }
+	.w_unit { width: 100%; float: left; display: inline; position: relative; } /* rgne.ws/SX31y1 */
 		.debug .w_unit { background: rgba(0, 0, 255, .25); } /* blue, #00f */
 
 /*----------------------------------*/
@@ -435,7 +435,7 @@
  */
 
 .w_boxes:before, .w_boxes:after { content: ""; display: table; } .w_boxes:after { clear: both; } .w_boxes { *zoom: 1; } /* rgne.ws/KZHkqq */
-	.w_box { width: 100%; float: left; display: inline; position: relative; }
+	.w_box { width: 100%; float: left; display: inline; position: relative; } /* rgne.ws/SX31y1 */
 		.debug .w_box { background: rgba(0, 0, 255, .25); } /* blue, #00f */
 
 /**
@@ -444,7 +444,7 @@
 
 .w_A130ml { margin-left: 170px; } .w_A130mr { margin-right: 170px; } /* 130px + 40px */
 	.debug .w_A130ml, .debug .w_A130mr { background: rgba(128, 0, 128, .25); } /* purple, #800080 */
-.w_A130ml, .w_A130mr { width: auto; _height: 1%; _margin: 0; float: none; display: block; }
+.w_A130ml, .w_A130mr { width: auto; _height: 1%; margin-top: -1px; _margin-right: 0; margin-bottom: -1px; _margin-left: 0; padding: 1px 0; float: none; display: block; } /* rgne.ws/JAoGck */
 
 /**
  * `px` columns.
@@ -468,7 +468,7 @@
 		.debug .w_B130ml, .debug .w_B130mr { background: rgba(0, 128, 128, .25); }   /* teal, #008080 */
 		.debug .w_B300ml, .debug .w_B300mr { background: rgba(192, 192, 192, .25); } /* silver, #c0c0c0 */
 		.debug .w_B470ml, .debug .w_B470mr { background: rgba(0, 128, 0, .25); }     /* green, #008000 */
-	.w_B130ml, .w_B130mr, .w_B300ml, .w_B300mr, .w_B470ml, .w_B470mr { width: auto; _height: 1%; _margin: 0; float: none; display: block; }
+	.w_B130ml, .w_B130mr, .w_B300ml, .w_B300mr, .w_B470ml, .w_B470mr { width: auto; _height: 1%; margin-top: -1px; _margin-right: 0; margin-bottom: -1px; _margin-left: 0; padding: 1px 0; float: none; display: block; }
 	
 	/**
 	 * `px` columns.
@@ -503,7 +503,7 @@
 		.debug .w_C470ml, .debug .w_C470mr { background: rgba(255, 255, 0, .25); }   /* yellow, #ff0 */
 		.debug .w_C640ml, .debug .w_C640mr { background: rgba(255, 0, 0, .25); }     /* red, #f00 */
 		.debug .w_C810ml, .debug .w_C810mr { background: rgba(255, 0, 255, .25); }   /* fuchsia, #f0f */
-	.w_C130ml, .w_C130mr, .w_C300ml, .w_C300mr, .w_C470ml, .w_C470mr, .w_C640ml, .w_C640mr, .w_C810ml, .w_C810mr { width: auto; _height: 1%; _margin: 0; float: none; display: block; }
+	.w_C130ml, .w_C130mr, .w_C300ml, .w_C300mr, .w_C470ml, .w_C470mr, .w_C640ml, .w_C640mr, .w_C810ml, .w_C810mr { width: auto; _height: 1%; margin-top: -1px; _margin-right: 0; margin-bottom: -1px; _margin-left: 0; padding: 1px 0; float: none; display: block; }
 	
 	/**
 	 * `px` columns.
@@ -546,7 +546,7 @@
 		.debug .w_D810ml, .debug .w_D810mr { background: rgba(0, 255, 0, .25); }       /* lime, #0f0 */
 		.debug .w_D980ml, .debug .w_D980mr { background: rgba(0, 128, 0, .25); }       /* green, #008000 */
 		.debug .w_D1150ml, .debug .w_D1150mr { background: rgba(192, 192, 192, .25); } /* silver, #c0c0c0 */
-	.w_D130ml, .w_D130mr, .w_D300ml, .w_D300mr, .w_D470ml, .w_D470mr, .w_D640ml, .w_D640mr, .w_D810ml, .w_D810mr, .w_D980ml, .w_D980mr, .w_D1150ml, .w_D1150mr { width: auto; _height: 1%; _margin: 0; float: none; display: block; }
+	.w_D130ml, .w_D130mr, .w_D300ml, .w_D300mr, .w_D470ml, .w_D470mr, .w_D640ml, .w_D640mr, .w_D810ml, .w_D810mr, .w_D980ml, .w_D980mr, .w_D1150ml, .w_D1150mr { width: auto; _height: 1%; margin-top: -1px; _margin-right: 0; margin-bottom: -1px; _margin-left: 0; padding: 1px 0; float: none; display: block; }
 	
 	/**
 	 * `px` columns.
@@ -661,6 +661,18 @@
 /*-----------------( [ A ]LPHA )-----------------*/
 
 /**
+ * Vertical lines between `px` and `px`/`%` columns.
+ * Compatible with IE > 7.
+ *
+ * @see rgne.ws/M85ynR
+ */
+
+.w_Alb:before, .w_Blb:before, .w_Clb:before, .w_Dlb:before, .w_Ala:after, .w_Bla:after, .w_Cla:after, .w_Dla:after { border-right: 1px solid #ccc; content: ""; display: none; position: absolute; top: 0; bottom: 0; }
+.w_Alb:before, .w_Blb:before, .w_Clb:before, .w_Dlb:before { left: -21px; }
+.w_Ala:after, .w_Bla:after, .w_Cla:after, .w_Dla:after { right: -20px; }
+.w_Alb:before, .w_Ala:after { display: block; }
+
+/**
  * Borders.
  * Designed for use on a "wrapping" `div` inside `px` or `%` columns.
  */
@@ -691,15 +703,10 @@
 	/*-----------------( [ B ]RAVO )-----------------*/
 	
 	/**
-	 * Vertical lines between `px` columns.
-	 * Compatible with IE > 7.
-	 *
-	 * @see rgne.ws/M85ynR
+	 * Vertical lines between `px` and `px`/`%` columns.
 	 */
 	
-	.w_Blb:before, .w_Clb:before, .w_Dlb:before, .w_Bla:after, .w_Cla:after, .w_Dla:after { border-right: 1px solid #ccc; content: ""; display: none; position: absolute; top: 0; bottom: 0; }
-	.w_Blb:before, .w_Clb:before, .w_Dlb:before { left: -21px; }
-	.w_Bla:after, .w_Cla:after, .w_Dla:after { right: -20px; }
+	.w_Alb:before, .w_Ala:after { display: none; }
 	.w_Blb:before, .w_Bla:after { display: block; }
 	
 	/*----------------------------------*/
@@ -734,7 +741,7 @@
 	/*-----------------( [ C ]HARLIE )-----------------*/
 	
 	/**
-	 * Vertical lines between `px` columns.
+	 * Vertical lines between `px` and `px`/`%` columns.
 	 */
 	
 	.w_Blb:before, .w_Bla:after { display: none; }
@@ -772,7 +779,7 @@
 	/*-----------------( [ D ]ELTA )-----------------*/
 	
 	/**
-	 * Vertical lines between `px` columns.
+	 * Vertical lines between `px` and `px`/`%` columns.
 	 */
 	
 	.w_Clb:before, .w_Cla:after { display: none; }
